--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "@mohammedalfarra/nestjs-filter",
-  "version": "0.1.3",
+  "name": "nestjs-filter",
+  "version": "0.1.0",
   "description": "A reusable filter package for NestJS applications.",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
-    "build": "tsc"
+    "build": "rm -rf dist && tsc -p tsconfig.json",
+    "prepublishOnly": "npm run build"
   },
   "repository": {
     "type": "git",
