--- a/package.json
+++ b/package.json
@@ -6,7 +6,12 @@
   "types": "dist/index.d.ts",
   "scripts": {
     "build": "rm -rf dist && tsc -p tsconfig.json",
-    "prepublishOnly": "npm run build"
+    "prepublishOnly": "npm run build",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:cov": "jest --coverage",
+    "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
+    "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "repository": {
     "type": "git",
@@ -25,8 +30,15 @@
   "devDependencies": {
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
-    "class-validator": "^0.14.0",
+    "@nestjs/platform-express": "^10.4.15",
+    "@nestjs/testing": "^10.4.15",
+    "@nestjs/typeorm": "^10.0.2",
+    "@types/jest": "^29.5.14",
     "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0",
+    "jest": "^29.7.0",
+    "sqlite3": "^5.1.7",
+    "ts-jest": "^29.2.5",
     "typeorm": "^0.3.0",
     "typescript": "^4.5.5"
   }
